yuritarded